2009-04-26  Rik  <rdrider0-list@yahoo.com>
	* interpreter/arith.txi: Update section 17.5 (Utility Functions) of arith.txi

2009-04-26  Rik  <rdrider0-list@yahoo.com>
	* interpreter/arith.txi: Update section 17.4 (Sums and Products) of arith.txi

2009-04-29  Jaroslav Hajek  <highegg@gmail.com>

	* interpreter/numbers.txi: Update info on ranges.
	* interpreter/expr.txi: Update some info on indexing.

2009-04-26  Rik  <rdrider0-list@yahoo.com>
	* interpreter/arith.txi: Update section 17.3 (Trigonometry) of arith.txi

2009-04-24  Rik  <rdrider0-list@yahoo.com>
	* interpreter/arith.txi: Update section 17.2 (Complex Arithmetic) of
	arith.txi
	Use Tex in more of the doc strings for pretty printing in pdf format.

2009-04-24  Rik  <rdrider0-list@yahoo.com>
	* interpreter/octave.pdf: 
	Eliminate most overfull errors when running texi2pdf for generating 
	pdf documentation.
	Use @smallexample when necessary to reduce font for long lines.
	Reword variables or phrases so that Tex can break them at a better spot.

2009-04-21  Rik  <rdrider0-list@yahoo.com>
	* interpreter/octave.pdf: Eliminate 'unbalanced parentheses in @def...'
	error during texi2pdf.  Fixed four .m files incorrectly using @deftypefn 
	macro.

2009-04-19  Ansgar Burchardt  <ansgar@43-1.org>

	* interpreter/numbers.txi: Fix small mistake in example.

2009-04-17  Rik  <rdrider0-list@yahoo.com>
	* interpreter/arith.txi: Update section 17.1 (Utility Functions) of arith.txi
	Split section into "Exponents and Logarithms" and "Utility Functions"
	Use Tex in many more of the doc strings for pretty printing in pdf format.

2009-04-17  Rik  <rdrider0-list@yahoo.com>

	* interpreter/basics.txi: Update help text for sections 2.5, 2.6, 2.7
	of basics.txi 

2009-04-17  Rik  <rdrider0-list@yahoo.com>

	* interpreter/basics.txi: Update help text for sections 2.4 of basics.txi 

2009-04-17  Rik  <rdrider0-list@yahoo.com>

	* interpreter/basics.txi: Update help text for sections 2.2 
	and 2.3 of basics.txi
